--- a/part0/04.md
+++ b/part0/04.md
@@ -1,3 +1,4 @@
+```mermaid
 sequenceDiagram
     browser->>server: POST https://studies.cs.helsinki.fi/exampleapp/new_note
 
@@ -14,4 +15,5 @@ sequenceDiagram
     server-->>browser: [{content: "test", date: "2023-02-20T18:33:00.307Z"},…]
 
     browser->>server: GET https://studies.cs.helsinki.fi/favicon.ico
-    server-->>browser: ico file
+    server-->>browser: ico file 
+```
