--- a/part0/05.md
+++ b/part0/05.md
@@ -1,3 +1,4 @@
+```mermaid
 sequenceDiagram
     browser->>server: GET https://studies.cs.helsinki.fi/exampleapp/spa
     server-->>browser: HTML document
@@ -13,3 +14,4 @@ sequenceDiagram
 
     browser->>server: GET https://studies.cs.helsinki.fi/favicon.ico
     server-->>browser: ico file
+```
