--- a/part0/06.md
+++ b/part0/06.md
@@ -1,3 +1,4 @@
+```mermaid
 sequenceDiagram
     browser->>server: GET https://studies.cs.helsinki.fi/exampleapp/spa
     server-->>browser: HTML document
@@ -15,3 +16,4 @@ sequenceDiagram
     server-->>browser: ico file
 
     browser->>server: POST https://studies.cs.helsinki.fi/exampleapp/new_note_spa
+```
